<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/image_view_logo"
            android:layout_width="@dimen/icon_size_3x"
            android:layout_height="@dimen/icon_size_3x"
            android:background="@mipmap/zmaj_logo"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/image_content_description" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_view_organization_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/organization_name"
                android:textSize="18sp"
                android:textColor="@color/colorCardTitleText"
                android:layout_marginTop="6dp"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_time_label"/>
                <TextView
                    android:id="@+id/text_view_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_time_default_date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/identify_time_label"/>
                <TextView
                    android:id="@+id/text_view_identify_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/identify_time_default_date"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_count_label"/>
                <TextView
                    android:id="@+id/text_view_product_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_count_default"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/component_small_margin"
            android:layout_marginTop="@dimen/component_small_margin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:text="@string/details_label"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_14sp"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/image_view_seal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/seal_success"
                android:layout_marginTop="6dp"
                android:contentDescription="@string/image_content_description" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/h_line"
        android:contentDescription="@string/image_content_description" />

</LinearLayout>