<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/img_logo"
            android:layout_width="@dimen/icon_size_3x"
            android:layout_height="@dimen/icon_size_3x"
            android:background="@mipmap/zmaj_logo"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_gravity="center_vertical"
            android:contentDescription="@string/image_content_description" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/text_view_factory_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/factory_name_default"
                android:textSize="@dimen/text_size_18sp"
                android:textColor="@color/colorCardTitleText"
                android:layout_marginTop="@dimen/component_small_margin"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/component_xx_small_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_label"/>
                <TextView
                    android:id="@+id/text_view_product_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_default"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/component_xx_small_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_function_label"/>
                <TextView
                    android:id="@+id/product_function"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_function_default"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="@dimen/component_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_promise_label"/>
                <TextView
                    android:id="@+id/product_promise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_promise_default"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="@dimen/component_small_margin"
            android:layout_gravity="center_vertical">

            <ImageView
                android:id="@+id/image_view_seal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@mipmap/seal_success"
                android:contentDescription="@string/image_content_description" />

        </LinearLayout>
    </LinearLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/h_line"
        android:contentDescription="@string/image_content_description" />

</LinearLayout>