<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@mipmap/zmaj_logo"
                    android:contentDescription="@string/image_content_description" />
                <TextView
                    android:id="@+id/text_view_organization_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/organization_name"
                    android:textColor="@color/colorCardTitleText"
                    android:textSize="@dimen/text_size_24sp"
                    android:layout_marginLeft="@dimen/component_margin"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/component_margin"
                android:layout_marginLeft="@dimen/component_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_time_label"
                    android:textSize="@dimen/text_size_14sp"/>
                <TextView
                    android:id="@+id/text_view_create_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/create_time_default_date"
                    android:textSize="@dimen/text_size_14sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/component_margin"
                android:layout_marginBottom="@dimen/component_margin"
                android:layout_marginLeft="@dimen/component_margin">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_count_label"
                    android:textSize="@dimen/text_size_14sp"/>
                <TextView
                    android:id="@+id/text_view_product_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_count_default"
                    android:textSize="@dimen/text_size_14sp"/>
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/image_view_seal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/seal_success_in_card"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/activity_horizontal_margin"
            android:contentDescription="@string/image_content_description" />

    </RelativeLayout>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@mipmap/h_line"
        android:contentDescription="@string/image_content_description" />

</LinearLayout>