<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_rest_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.common.activity.RestPasswordActivity">

    <com.templateapplication.components.ToolbarCloseAndCheckLayout
        android:id="@+id/toolbar_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:layout_marginBottom="@dimen/activity_vertical_margin">

    </com.templateapplication.components.ToolbarCloseAndCheckLayout>

    <!--登录密码-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_layout_height">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password_label" />
    </android.support.design.widget.TextInputLayout>
    <!--重新输入登录密码-->
    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_password_twice"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_layout_height">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_password_twice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/twice_password_label" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_mobilephone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/text_input_layout_height">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/text_input_mobilephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/mobielphone_label" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_identifying_code"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="@dimen/text_input_layout_height">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_identifying_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/identify_code_label" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/btn_identifying_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_identify_code_label"
            android:layout_gravity="bottom"
            android:layout_marginBottom="@dimen/text_input_edit_text_btn_margin_bottom"
            android:textColor="@color/colorTextLight"
            android:textSize="@dimen/text_size_14sp"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:background="@mipmap/button_bg_120x44"/>
    </LinearLayout>

</LinearLayout>
