<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:zmaj="http://schemas.android.com/apk/com.templateapplication"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.common.activity.RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.templateapplication.components.ToolbarCloseAndCheckLayout
            android:id="@+id/toolbar_close_check_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/toolbar_height"
            zmaj:text="注册">
        </com.templateapplication.components.ToolbarCloseAndCheckLayout>

        <!--用户名-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_username"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_height"
            android:layout_marginTop="@dimen/activity_horizontal_margin">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name_label" />
        </android.support.design.widget.TextInputLayout>
        <!--登录密码-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_height">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password_label" />
        </android.support.design.widget.TextInputLayout>
        <!--重新输入登录密码-->
        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_password_twice"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_height">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_password_twice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/twice_password_label" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/text_input_layout_mobilephone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/text_input_layout_height">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/text_input_mobilephone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobielphone_label" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_identifying_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="@dimen/text_input_layout_height">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/text_input_identifying_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/identify_code_label" />
            </android.support.design.widget.TextInputLayout>
            <Button
                android:id="@+id/btn_identifying_code"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/get_identify_code_label"
                android:layout_gravity="bottom"
                android:layout_marginBottom="@dimen/text_input_edit_text_btn_margin_bottom"
                android:textColor="@color/colorTextLight"
                android:textSize="@dimen/text_size_14sp"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:background="@mipmap/button_bg_120x44"/>
        </LinearLayout>

    </LinearLayout>



</RelativeLayout>
